# webcv

./: README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
webcv/: __init__.py  manager.py  server.py
webcv/templates/: index.html
