[metadata]
name = webcv
version = 0.0.1
author = Zhaoyi Wan
author_email = i@wanzy.me
description = "A web wrapper for opencv that supports displaying via web browsers."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wanzysky/webcv
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = webcv
packages = find:
python_requires = >=3.7
install_requires =
    quart
    opencv-python

[options.packages.find]
where = webcv
